--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-leaflet-demo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://doublebyte1.github.io/react-leaflet-demo-stadia/",
+  "homepage": "https://ogcincubator.github.io/code-sprint-nodes",
   "dependencies": {
     "@maplibre/maplibre-gl-leaflet": "^0.0.19",
     "@testing-library/jest-dom": "^5.16.5",
